--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -49,8 +49,8 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    height: 50px;
-    width: 50px;
+    height: 2.6rem;
+    width: 2.6rem;
     background-color: #494953;
     margin-top: 20px;
     text-align: center;
