contact functionality implemented

--- a/src/pages/Contact/Contact.css
+++ b/src/pages/Contact/Contact.css
@@ -4,6 +4,9 @@
 
 .contact-section{
     background-color: rgb(239, 232, 232);
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .contact{
