--- a/src/pages/Projects/Projects.css
+++ b/src/pages/Projects/Projects.css
@@ -42,3 +42,52 @@
   #dark .projects{
     background-color: rgba(112, 112, 112, 0.595);
   }
+
+
+  @media screen and (max-width: 1560px) {
+    .p-card{
+      width: 20rem !important;
+    }
+  }
+  @media screen and (max-width: 1335px) and (min-width:1219px) {
+    .p-card{
+      width: 18rem !important;
+    }
+  }
+  @media screen and (max-width: 1220px) and (min-width:1106px) {
+    .p-card{
+      width: 16rem !important;
+    }
+  }
+  @media screen and (max-width: 995px) and (min-width:855px) {
+    .p-card{
+      width: 19rem !important;
+    }
+    .projectsec{
+      justify-content: center !important;
+    }
+  }
+  @media screen and (max-width: 854px) and (min-width:768px) {
+    .p-card{
+      width: 15rem !important;
+    }
+    .projectsec{
+      justify-content: center !important;
+    }
+  }
+  @media screen and (max-width: 767px) and (min-width:345px) {
+    .p-card{
+      width: 16.6rem !important;
+    }
+    .projectsec{
+      justify-content: center !important;
+    }
+  }
+  @media screen and (max-width: 344px) and (min-width:100px) {
+    .p-card{
+      width: 10rem !important;
+    }
+    .projectsec{
+      justify-content: center !important;
+    }
+  }
